# paper_updater_rs

./: Cargo.toml  README.md
src/: main.rs  paper_api.rs
