[package]
name = "paper_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
indicatif = "0.17.3"
reqwest = { version = "0.11.14", features = ["stream", "json"] }
rfd = "0.11.0"
serde = { version = "1.0.152", features = ["derive"]}
tokio = { version = "1.25.0", features = ["full"] }
