[package]
name = "paper_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
indicatif = "0.17.7"
reqwest = { version = "0.11.20", features = ["stream", "json"] }
rfd = "0.12.0"
serde = { version = "1.0.188", features = ["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
