[package]
name = "paper_updater"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["derive"]}
tokio = { version = "1.43.0", features = ["full"] }
